# 211_331_Kuznetsov

./: .gitignore  CMakeLists.txt  README.md  debugprotection.cpp  debugprotection.h  encryptionmanager.cpp  encryptionmanager.h  integritycheck.cpp  integritycheck.h  main.cpp  mainwindow.cpp  mainwindow.h
SelfDebugger/: main.cpp
data/: invoices_invalid.json  invoices_valid.enc  invoices_valid.json
